# omdb-rs

./: .gitignore  Cargo.toml  README.md  apikey.txt  nohup.out
src/: .lib.rs.swp  lib.rs
