[package]
name = "omdbrs"
version = "1.0.0"
authors = ["SuedeGently <ymp17kwu@uea.ac.uk>"]
edition = "2018"
repository = "README.md"
description = "OMDb API library"
keywords = ["omdb","api","http"]
categories = ["api-bindings"]
license = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
reqwest = { version = "0.9.22" }
serde_json = "1.0.44"
serde = { version = "1.0.104", features = ["derive"] }
